@startuml database

entity users {
    id
    --
    office_id
    --
    name
    --
    email
    --
    password
}

entity offices {
    id
    --
    name
    --
    code
    --
    address
}

entity enter_activities {
    id
    --
    user_id
    --
    enter_at
}

entity sessions {
    id
    --
    user_id
}

offices ||--o{ users
users ||--o{ enter_activities
users ||--o{ sessions
@enduml